--- a/binomial/README.Rmd
+++ b/binomial/README.Rmd
@@ -1,7 +1,19 @@
 ---
-title: "README"
-output: html_document
+output:
+  github_document:
+    html_preview: false
 ---
+
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "README-"
+)
+```
+
 
 ## Overview
 "binomial" is a minimal package that simulates information about multiple coin tosses each with the same probability. It also can make some graphs.
